logs/releasetools.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/basketweaver'...
Compiling './lib/python3.5/site-packages/basketweaver/makeindex.py'...
*** Sorry: TabError: inconsistent use of tabs and spaces in indentation (makeindex.py, line 20)
Listing './lib/python3.5/site-packages/basketweaver-0.1.3.post0.egg-info'...
Listing './lib/python3.5/site-packages/certifi'...
Listing './lib/python3.5/site-packages/certifi-2017.11.5.dist-info'...
Listing './lib/python3.5/site-packages/httplib2'...
Listing './lib/python3.5/site-packages/httplib2-0.10.3.egg-info'...
Listing './lib/python3.5/site-packages/oauth2'...
Listing './lib/python3.5/site-packages/oauth2/clients'...
Listing './lib/python3.5/site-packages/oauth2-1.9.0.post1.dist-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/releasetools'...
Listing './lib/python3.5/site-packages/releasetools/tracker'...
Compiling './lib/python3.5/site-packages/releasetools/tracker/main.py'...
***   File "./lib/python3.5/site-packages/releasetools/tracker/main.py", line 14
    print "Error: missing tracker type in " + config['config'] + ". Aborting."
                                          ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/releasetools-0.1.egg-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/tests'...
Listing './lib/python3.5/site-packages/virtualenv-15.1.0.dist-info'...
Listing './lib/python3.5/site-packages/virtualenv_support'...
Listing './lib/python3.5/site-packages/yolk'...
Compiling './lib/python3.5/site-packages/yolk/cli.py'...
***   File "./lib/python3.5/site-packages/yolk/cli.py", line 262
    print " %s %s (%s)" % (project_name, dist.version,
                      ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/yolk/plugins'...
Compiling './lib/python3.5/site-packages/yolk/plugins/__init__.py'...
***   File "./lib/python3.5/site-packages/yolk/plugins/__init__.py", line 98
    except Exception, err_msg:
                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/yolk/setuptools_support.py'...
***   File "./lib/python3.5/site-packages/yolk/setuptools_support.py", line 72
    except DownloadURI, url:
                      ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/yolk/utils.py'...
***   File "./lib/python3.5/site-packages/yolk/utils.py", line 40
    except Exception, errmsg:
                    ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/yolk-0.4.3.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
